--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,9 +12,10 @@
             <p class="logo-text">Logo</p>
         </div>
         <div class="nav-menu">
-            <div class="about">About</div>
-            <div class="work">Work</div>
-            <div class="contact">Contact</div>
+            <div class="about"><a href="about.html" class="nav__link">About</a></div>
+            <div class="work"><a href="#work" class="nav__link">Work</a></div>
+            <div class="contact"><a href="#contact" class="nav__link">Contact</a></div>
+            <div class="svg-icon"></div>
         </div>
     </nav>
     <header>
@@ -74,7 +75,7 @@
         </div>
       </div>
       
-    <div class="latest-work">
+    <div id="work" class="latest-work">
         <h2 class="latestwork-title">My Latest Work</h2>
         <div class="work-container">
             <div class="work-card">
@@ -183,7 +184,7 @@
         </div>
     </div>
     
-    <footer>
+    <footer id="contact">
         <div class="footer-info">
             <div class="main-info">
               <div class="contact-info">
